--- a/backend/src/main/resources/application-prod.yml
+++ b/backend/src/main/resources/application-prod.yml
@@ -1,6 +1,6 @@
 spring:
   autoconfigure:
-    exclude: # 여기를 이렇게 재정의 함으로써 운영환경에서는 레디스가 다시 활성화 됩니다.
+    exclude:
   data:
     redis:
       host: redis_1
